WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269886
REGRESSION (Safari 17.2): Does not respect mousemove events in an iframe when the mouse is clicked from outside of an iframe
https://bugs.webkit.org/show_bug.cgi?id=269886
Summary
REGRESSION (Safari 17.2): Does not respect mousemove events in an iframe when...
Abrar Rahman Protyasha
Reported
2024-02-21 18:09:32 PST
rdar://120540148
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-02-21 18:31:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24919
EWS
Comment 2
2024-02-22 00:10:40 PST
Committed
275157@main
(50f43b731d20): <
https://commits.webkit.org/275157@main
> Reviewed commits have been landed. Closing PR #24919 and removing active labels.
EWS
Comment 3
2024-02-28 22:31:43 PST
Committed
272448.647@safari-7618-branch
(29dc10bd00d6): <
https://commits.webkit.org/272448.647@safari-7618-branch
> Reviewed commits have been landed. Closing PR #1108 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug